manifests/apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-demo
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: http
